MB-47055: Handle and rethrow underflow after logging collection ID

Currently we are seeing issues with the dropped collection item
counting for magma (we are throwing when adding the droppedInFlush
itemCount. To aid debugging this, catch the underflow, log the vbid
and collection (which lets us retrace the history using the
memcached logs).

Change-Id: I3f727ee5465f22372adb0357426e9a6bb54fd59a
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/156334
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>